fixed alignment

--- a/voxicons/css/main.css
+++ b/voxicons/css/main.css
@@ -6,12 +6,14 @@ body {
     padding: 0;
 }
 
-header {
+header, footer {
     background: #1a1a1a;
     padding: 40px 20px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0,0,0,0.5);
 }
+
+
 
 header img {
     max-width: 350px;
